# cooklang-hs

./: .gitignore  .hlint.yaml  CHANGELOG.md  Canonical.hs  Cook.hs  GenerateCanonical.hs  LICENSE.md  Main.hs  README.md  Spec.hs  cooklang-hs.cabal  package.yaml  test.cook
Text/: Cook.hs
app/: Main.hs
src/: Cook.hs  Lib.hs
test/: GenerateCanonical.hs  Spec.hs  canonical.yaml
